kubernetes/prd/console/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: llm-ops-console-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/security-groups: sg-000585038d75e638e,sg-0076cb5e92a093750
    alb.ingress.kubernetes.io/manage-backend-security-group-rules: "true"
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS": 443}]'
#    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-1:226604077721:certificate/6b062dcc-c020-4580-bee0-34fd5a6a23a8
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    alb.ingress.kubernetes.io/tags: Env=production,Cost=smartnews,System=gai-platform,Component=llm-ops-console,Team=ai-infrastructure
    alb.ingress.kubernetes.io/healthcheck-path: /ping
    external-dns.alpha.kubernetes.io/hostname: llm-ops.smartnews.net
    alb.ingress.kubernetes.io/ip-address-type: dualstack
    alb.ingress.kubernetes.io/auth-session-timeout: '86400'
    alb.ingress.kubernetes.io/actions.redirect-to-portal: >
      {"type":"redirect","redirectConfig":{"host":"llm-ops-portal.smartnews.net","path":"/","port":"443","protocol":"HTTPS","query":"","statusCode":"HTTP_302"}}
spec:
  rules:
    - host: llm-ops.smartnews.net
      http:
        paths:
          - path: /api/
            pathType: Prefix
            backend:
              service:
                name: llm-ops-server
                port:
                  number: 3000
          - path: /graphql
            pathType: Prefix
            backend:
              service:
                name: llm-ops-server
                port:
                  number: 3000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: redirect-to-portal
                port:
                  name: use-annotation
